--- a/GLideN64.custom.ini
+++ b/GLideN64.custom.ini
@@ -343,7 +343,7 @@ frameBufferEmulation\detectCFB=1
 Good_Name=Roadsters Trophy (E)(U)
 frameBufferEmulation\copyDepthToRDRAM=0
 
-[ROGUE SQUADRON]
+[ROGUE%20SQUADRON]
 Good_Name=Star Wars - Rogue Squadron (E) (U)
 video\multisampling=0
 
