--- a/projects/msvc12/GLideN64.vcxproj
+++ b/projects/msvc12/GLideN64.vcxproj
@@ -292,6 +292,7 @@
     <ClCompile Include="..\..\src\PostProcessor.cpp" />
     <ClCompile Include="..\..\src\RDP.CPP" />
     <ClCompile Include="..\..\src\RSP.cpp" />
+    <ClCompile Include="..\..\src\ShaderUtils.cpp" />
     <ClCompile Include="..\..\src\TextDrawer.cpp" />
     <ClCompile Include="..\..\src\Textures.cpp" />
     <ClCompile Include="..\..\src\Turbo3D.cpp" />
@@ -366,6 +367,7 @@
     <ClInclude Include="..\..\src\RDP.h" />
     <ClInclude Include="..\..\src\RSP.h" />
     <ClInclude Include="..\..\src\Shaders.h" />
+    <ClInclude Include="..\..\src\ShaderUtils.h" />
     <ClInclude Include="..\..\src\TextDrawer.h" />
     <ClInclude Include="..\..\src\Textures.h" />
     <ClInclude Include="..\..\src\Turbo3D.h" />
