add settings for Bio F.R.E.A.K.S.

--- a/GLideN64.custom.ini
+++ b/GLideN64.custom.ini
@@ -43,6 +43,11 @@ Good_Name=Beetle Adventure Racing (J)
 frameBufferEmulation\copyToRDRAM=1
 frameBufferEmulation\copyDepthToRDRAM=1
 
+[BIOFREAKS]
+Good_Name=Bio F.R.E.A.K.S. (E)(U)
+frameBufferEmulation\copyToRDRAM=1
+frameBufferEmulation\detectCFB=1
+
 [BIOHAZARD%20II]
 Good_Name=Biohazard 2 (J)
 frameBufferEmulation\detectCFB=1
