visual studio cleanup
use only one .sln file for all projects
add freetype to the repo
add dummy Revision.h to avoid build errors
fix build warning: "TargetName(GLideN64) does not match the Linker's
OutputFile property value"

--- a/projects/msvc12/libGLideNHQ.vcxproj
+++ b/projects/msvc12/libGLideNHQ.vcxproj
@@ -86,11 +86,11 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <TargetExt>.lib</TargetExt>
-    <OutDir>$(SolutionDir)$(SolutionName)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)GLideNHQ\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release_dll|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)$(SolutionName)\$(Configuration)\</OutDir>
+    <OutDir>$(SolutionDir)GLideNHQ\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
